src: fix legends overlapping

--- a/src/pages/sourcepage/themes/base-time-chart-theme.scss
+++ b/src/pages/sourcepage/themes/base-time-chart-theme.scss
@@ -72,7 +72,11 @@
             }
         }
     }
+    .avg-response-time-chart {
+        padding-top: 30px;
+    }
     .bar-chart {
+        padding-top: 30px;
         .recharts-y-axis {
             .recharts-text.recharts-cartesian-axis-tick-value {
                 // fill: transparent;
